fixes padding bug on safari

--- a/scss/_student-create-account.scss
+++ b/scss/_student-create-account.scss
@@ -477,7 +477,7 @@
 }
 
 input[type=text], input[type=email], input[type=password] {
-  padding: 12px 20px;
+  padding: 0px 20px;
   width: 100%;
   border: 1px solid $mercury;
   border-radius: 3px;
